Fixed whitespaces

--- a/survey form contribution/survey_form by auliamnaufal/style.css
+++ b/survey form contribution/survey_form by auliamnaufal/style.css
@@ -1,4 +1,3 @@
- 
 .form-setup{
     display:flex;
     flex-direction: column;
@@ -6,27 +5,27 @@
     color:white;
     padding:10px;
     align-items: center;
-    margin-left:400px;
-    margin-right: 400px;
+    margin:0 400px 0;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     border-radius: 10px;
 }
+
 input:focus, textarea:focus, select:focus{
     outline: none;
 }
-  .form-group1 input,select,textarea{
-     margin:0;
-     height:30px;
-     border: none;
-border-color: transparent;
+
+.form-group1 input,select,textarea{
+    margin:0;
+    height:30px;
+    border: none;
+    border-color: transparent;
 
     
  }
 
  
 button  {
-  
-margin:auto;
+    margin:auto;
     width:400px;
     margin-top: 10px;
     margin-bottom:10px;
@@ -105,6 +104,10 @@ h1{
     border:none;
     padding:5px;
     
+}
+
+@media only screen and (max-width: 37.5em) {
+
 }
  
  
